--- a/SE/MainFiles_SE/SOE/public/display.css
+++ b/SE/MainFiles_SE/SOE/public/display.css
@@ -3,17 +3,22 @@ html{
 }
 
 body{
+  width: 100%;
+  margin: 0px;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
   background-size: cover;
-  margin: 0px 0px 0px 0px;
 }
 
 .building_name{
-  background-color: rgb(0,0,0,0.6);
+  /* background-color: rgb(0,0,0,0.5); */
   width: 100%;
   height: 200px;
   text-align: center;
-  color: white;
-  top: 30px;
+  color: black;
+  position: relative;
+  top: 28px;
   padding-top: 10px;
 }
 
@@ -24,19 +29,19 @@ body{
 #buildName{
   font-size: 53px;
   font-family: 'Lexend', sans-serif;
-  font-weight: 300;
+  font-weight: 600;
   margin-top: 30px;
 }
 
 #buildLocation{
   font-size: 22px;
   font-family: 'Lexend', sans-serif;
-  font-weight: 200;
-  margin-top: 30px;
+  font-weight: 600;
+  margin-top: 10px;
 }
 
 .forDates{
-  background-color: rgb(0,0,0,0.1);
+  background-color: rgb(0,0,0,0.3);
   font-family: 'Kiwi Maru', serif;
   border-radius: 5px;
   width: 30%;
@@ -51,7 +56,7 @@ body{
 }
 
 .forDates1{
-  background-color: rgb(0,0,0,0.1);
+  background-color: rgb(0,0,0,0.4);
   font-family: 'Kiwi Maru', serif;
   border-radius: 5px;
   width: 60%;
@@ -67,7 +72,7 @@ body{
 }
 
 .forDates2{
-  background-color: rgb(0,0,0,0.1);
+  background-color: rgb(0,0,0,0.4);
   font-family: 'Kiwi Maru', serif;
   border-radius: 5px;
   width: 60%;
@@ -111,7 +116,7 @@ body{
   width: 450px;
   height: 300px;
   margin: 0 auto;
-  background-color: rgb(0,0,0,0.4);
+  background-color: rgb(0,0,0,0.6);
   /* width: 600px;
   height: 480px; */
   text-align: center;
@@ -145,6 +150,7 @@ body{
   bottom: 30px;
   border-radius: 50px;
   cursor: pointer;
+  background-color: white;
 }
 
 .scroll-down::before,
