--- a/SE/MainFiles_SE/SOE/views/viewTemp.ejs
+++ b/SE/MainFiles_SE/SOE/views/viewTemp.ejs
@@ -18,7 +18,7 @@
          <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
       </head>
 
-      <body style="background-image: url('images/pic3.jpg');">
+      <body style="background-image: url('images/banner.png');">
 
       <section id="sec-1">
 
@@ -60,6 +60,7 @@
       </section>
 
       <script src="https://cdn.zoomcharts-cloud.com/1/latest/zoomcharts.js"></script>
+
 
       <section id="sec-2">
 
